Correction in dark mode and add roadmap

--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -11,6 +11,7 @@ html {
   --gradient-primary: linear-gradient(45deg, #edc5f3, #d1b3ff);
   --text-shadow: 0 0 10px rgba(160, 25, 180, 0.7);
   --hero-bg: transparent;
+  --color-card-project: rgba(255, 255, 255, 0.1);
 }
 
 [data-theme="light"] {
@@ -22,6 +23,7 @@ html {
   --gradient-primary: linear-gradient(45deg, #4d0099, #17012b);
   --text-shadow: 0 0 10px rgba(123, 31, 162, 0.5);
   --hero-bg: rgba(248, 240, 255, 0.1);
+  --color-card-project: rgba(15, 15, 15, 0.116);
 }
 
 * {
@@ -61,6 +63,7 @@ body {
 }
 
 .navbar {
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -224,8 +227,9 @@ body {
 }
 
 .about-text h2 {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   color: var(--color-text-primary);
+  text-align: center;
 }
 
 .about-text p {
@@ -236,17 +240,25 @@ body {
 }
 
 /* Tech stack */
+.about-section > h2 {
+  text-align: center;
+  color: var(--color-text-primary);
+  font-weight: 500;
+  margin-bottom: 2rem ;
+}
+
 .tech-stack {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 2rem;
   justify-content: center;
-  margin-top: 2rem;
+  margin: 2rem 5rem;
   padding: 1rem;
 }
 
+
 .tech-stack svg {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   color: var(--color-text-secondary);
   transition: transform 0.1s ease, color 0.1s ease;
   cursor: default;
@@ -278,14 +290,15 @@ body {
 
 .project-card {
   color: var(--color-text-primary);
-  background: rgba(255, 255, 255, 0.1);
+  background:  var(--color-card-project);
   border-radius: 10px;
   padding: 1.5rem;
   transition: transform 0.3s ease;
 }
 
 .project-card:hover {
-  transform: translateY(-5px);
+   transform: translateY(-5px);
+  box-shadow: 0 4px 20px rgba(160, 25, 180, 0.2);
 }
 
 .project-card img {
@@ -387,18 +400,17 @@ body {
 }
 
 .theme-toggle:hover {
-  color: #a019b4; /* morado vibrante */
+  color: var(--color-accent);
 }
 
 
 
-/* En tu CSS global o un módulo CSS */
 
 .spinner-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 200px; /* Ajusta según el espacio que quieras reservar */
+  min-height: 200px; 
 }
 
 .spinner {
@@ -416,24 +428,112 @@ body {
   }
 }
 
+.timeline-section {
+  padding: 4rem 2rem;
+  color: var(--color-text-primary);
+  max-width: 900px;
+  margin: auto;
+}
+
+.timeline-title {
+  font-size: 2.2rem;
+  text-align: center;
+  margin-bottom: 3rem;
+  color: var(--color-accent);
+  text-shadow: var(--text-shadow);
+}
+
+/* Línea vertical */
+.timeline {
+  position: relative;
+  padding-left: 2rem;
+  border-left: 2px solid var(--color-accent)
+}
+
+/* Punto de la línea */
+.timeline-dot {
+  width: 16px;
+  height: 16px;
+  background-color: var(--color-accent);
+  border-radius: 50%;
+  position: absolute;
+  left: -9px;
+  top: 0;
+  box-shadow: 0 0 10px var(--color-accent);
+  animation: pulseDot 2s infinite ease-in-out;
+}
+
+@keyframes pulseDot {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.3); }
+}
+
+/* Cada ítem del timeline */
+.timeline-item {
+  position: relative;
+  margin-bottom: 3rem;
+  padding-left: 1rem;
+}
+
+.timeline-content {
+  background: var(--hero-bg);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.timeline-content:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 20px rgba(160, 25, 180, 0.2);
+}
+
+.timeline-content h3 {
+  color: var(--color-accent);
+  margin-bottom: 0.5rem;
+  font-size: 1.4rem;
+  text-shadow: var(--text-shadow);
+}
+
+.timeline-content p {
+  line-height: 1.6;
+  font-size: 1rem;
+  color: var(--color-text-secondary);
+}
+
+/* Responsive */
+
 /* Responsive */
 
  
 @media (max-width: 768px) {
  .nav-menu {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    flex-direction: column;
-    background-color: rgba(5, 0, 8, 0.95);
-    backdrop-filter: blur(12px);
-    padding: 1.5rem 2rem;
-    border-radius: 1rem;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
-    transform: translateY(-20px);
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s ease, transform 0.3s ease;
+  position: absolute;
+  top: 100%;
+  right: 2rem; 
+  background-color: rgba(5, 0, 8, 0.95);
+  backdrop-filter: blur(12px);
+  padding: 1.5rem 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
+  transform: translateY(-20px);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+
+    .timeline-section {
+    padding: 3rem 1rem;
+  }
+
+  .timeline-title {
+    font-size: 1.8rem;
+  }
+
+  .timeline-content {
+    padding: 1rem;
   }
 
   .nav-menu.open {
@@ -445,6 +545,18 @@ body {
   .menu-toggle {
     display: block;
   }
+
+  .theme-toggle {
+  background: none;
+  border: none;
+  color: var(--color-text-primary);
+  font-size: 1.4rem;
+  padding-top: 1rem;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+
 
   .nav-menu li {
     margin: 1rem 0;
@@ -475,13 +587,15 @@ body {
 
 
 
+
+
 @media (max-width: 480px) {
  .nav-menu {
     position: absolute;
     top: 100%;
     right: 0;
     flex-direction: column;
-    background-color: rgba(5, 0, 8, 0.95);
+    background-color: var(--color-deep-black);
     backdrop-filter: blur(12px);
     padding: 1.5rem 2rem;
     border-radius: 1rem;
@@ -491,6 +605,8 @@ body {
     pointer-events: none;
     transition: opacity 0.3s ease, transform 0.3s ease;
   }
+
+
 
   .nav-menu.open {
     transform: translateY(0);
@@ -505,7 +621,15 @@ body {
   .nav-menu li {
     margin: 1rem 0;
   }
-
+  
+.theme-toggle {
+  background: none;
+  border: none;
+  color: var(--color-text-primary);
+  font-size: 1.4rem;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
 
 
   .title {
